# openai-discourse-forum-mcp

./: .gitignore  AGENT.md  AGENTS.md  README.md  TASKS.md  pyproject.toml  server.py
resources/: __init__.py  categories.py  site.py  tags.py
tools/: __init__.py  discourse.py
